--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,113 +1,257 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
-  <div class="row mt-3 mb-0">
-    <div class="col-5">
-      <h1 class="text-left text-uppercase">Jijo P Jose</h1>
-      <div class="blockquote">Research Engineer <span class="text-primary">|</span> Full Stack Developer</div> 
+  <div class="row mt-0 mb-0">
+    <div class="col-8">
+      <h2 class="text-left">JIJO P JOSE</h2>
+      <div class="blockquote">
+        Software Engineer <span class="text-primary">|</span> Full Stack
+        Developer
+      </div>
     </div>
-    <div class="col-7 text-right p-1 text-muted text-sm-right">
-      <div class="m-0"><span class="text-primary">jijopjose</span>@live.com</div>
-      <div class="m-0">+91 <span class="text-primary">8904498127</span></div>
-      <div class="m-0">linkedin.com/in/<span class="text-primary">jijopjose</span></div> 
-      <div class="m-0"><span class="text-primary">Bangalore</span>, India</div>
+    <div class="col-4">
+      <table class="table-sm float-right">
+        <tr class="m-0">
+          <td class="pb-0 pt-0">
+            <i class=" fa fa-envelope"></i>
+          </td>
+          <td class="pb-0 pt-0">
+            <span
+              class="text-primary"
+              > jijopjose@live.com</span
+            >
+          </td>
+        </tr>
+        <tr class="m-0">
+          <td class="pb-0 pt-0">
+            <i class="fa fa-mobile"></i>
+          </td>
+          <td class="pb-0 pt-0">
+            <span
+              class="text-primary"
+              > +91 8904498127</span
+            >
+          </td>
+        </tr>
+        <tr class="m-0">
+          <td class="pb-0 pt-0">
+            <i class="fa fa-linkedin"></i>
+          </td>
+          <td class="pb-0 pt-0">
+            linkedin.com/in/<span
+              class="text-primary"
+              >jijopjose</span
+            >
+          </td>
+        </tr>
+        <tr class="m-0">
+          <td class="pb-0 pt-0">
+            <i class="fa fa-location-arrow"></i>
+          </td>
+          <td class="pb-0 pt-0">
+            <span class="text-primary"> Bangalore</span>, India
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
-<hr class="m-0 bg-dark">
+<hr class="m-0"/>
 <div class="container">
-  <div class="row mt-0">
+  <div class="row mt-0 mb-0">
     <div class="col-8 m-0 p-0">
-
       <div class="card m-0 p-0 border-0">
-        <div class="card-header font-weight-bolder text-uppercase bg-white h5">Experience</div>
-        <div class="card-body m-0 p-0 border-bottom">
-          <table class="table table-light text-justify mb-0">
-            <tr class="border-bottom">
-              <td class="font-weight-bold mx-auto h5 center">Morgan Stanley</td>
-              <td class="mx-auto">Automation Engineer</td>
-              <td class="mx-auto">Aug 8, 2016 - Present</td>
+        <div
+          class="card-header font-weight-bolder text-uppercase h5 heading rounded-0 border-0 p-1"
+        >
+          <i class="fa fa-briefcase"></i> Experience
+        </div>
+        <div class="card-body m-0 p-0">
+          <table class="table m-0 p-0">
+            <tr class="m-0">
+              <td class="font-weight-bolder h5 pb-1 border-0" colspan="2">
+                Morgan Stanley
+              </td>
+            </tr>
+
+            <tr class="m-0">
+              <td class="pt-1">Software Engineer</td>
+              <td class="pt-1 float-right pr-3">
+                Aug 8, 2016 - Present
+              </td>
             </tr>
           </table>
+
           <div class="row m-0">
             <div class="col-1 m-auto">
               <p class="vertical-text m-4 font-weight-bold">Projects</p>
             </div>
             <div class="col-11 border-left m-0 p-0">
-              <table class="table table-borderless m-0 mb-1 p-1" *ngFor="let project of projects['Organization']; let i=index;">
-                <tr class="text-justify m-0 border-bottom"><span class="m-1 font-weight-bold">{{project.name}}</span></tr>
-                <tr class="text-justify m-0"><p class="ml-2 p-1 mb-1 font-weight-lighter">{{project.details}}</p></tr>
-                <tr [class.border-bottom]="i!=projects['Organization'].length-1"><span class="badge badge-danger bad ml-2 rounded-0" *ngFor="let ptag of project['tags']">#{{ptag}}</span></tr>
+              <table
+                class="table table-borderless m-0 mb-1 p-1"
+                [class.mt-1]="i == 0"
+                *ngFor="let project of projects['Organization']; let i = index"
+              >
+                <tr class="text-justify m-0">
+                  <span class="m-1 font-weight-bold">{{ project.name }}</span>
+                </tr>
+                <tr class="text-justify m-0">
+                  <ul class='m-0'>
+                    <li *ngFor="let item of project.details">
+                      {{ item }}
+                    </li>
+                  </ul>
+                  <!-- <p class="ml-2 p-1 mb-1 font-weight-lighter">
+                    {{}}
+                  </p> -->
+                </tr>
+                <tr
+                  [class.border-bottom]="
+                    i != projects['Organization'].length - 1
+                  "
+                >
+                  <span
+                    class="badge badge-secondary m-1 rounded-0 border-0"
+                    *ngFor="let ptag of project['tags']"
+                    >#{{ ptag }}</span
+                  >
+                </tr>
               </table>
             </div>
-          </div> 
+          </div>
         </div>
       </div>
 
       <div class="card m-0 p-0 border-0">
-        <div class="card-header font-weight-bolder text-uppercase bg-white h5">Education</div>
+        <div
+          class="card-header font-weight-bolder text-uppercase h5 heading rounded-0 border-0 p-1"
+        >
+          <i class="fa fa-graduation-cap"></i> Education
+        </div>
         <div class="card-body m-0 p-0">
-          <table class="table table-light text-justify mb-0">
-            <tr class="border-bottom" *ngFor="let education of personal_details['Education']">
-              <td class="font-weight-bold">{{education.degree}}</td>
-              <td class="border-left">{{education.institute}}</td>
-              <td class="border-left">{{education.year}}</td>
+          <ul *ngFor="let education of personal_details['Education']">
+            <li>
+              <table class="table table-sm table-borderless m-0 p-5">
+                <tr class="border-bottom">
+                  <td class="font-weight-bold">
+                    {{ education.institute }}
+                  </td>
+                  <td class="float-right pr-3">{{ education.year }}</td>
+                </tr>
+                <tr>
+                  <td>{{ education.degree }}</td>
+                  <td class="float-right pr-3">{{ education.marks }}</td>
+                </tr>
+              </table>
+            </li>
+          </ul>
+          <!-- <table class="table table-light text-justify mb-0 bg-gray">
+            <tr
+              class="border-bottom"
+              *ngFor="let education of personal_details['Education']"
+            >
+              <td class="font-weight-bold">{{ education.degree }}</td>
+              <td class="border-left">{{ education.institute }}</td>
+              <td class="border-left">{{ education.year }}</td>
               <td class="border-left">{{education.marks}}</td>
             </tr>
-          </table>
+          </table> -->
         </div>
-        <div class="card-body m-0 p-0 border-bottom">
+        <div class="card-body m-0 p-0">
           <div class="row m-0">
             <div class="col-1 m-auto">
               <p class="vertical-text m-4 font-weight-bold">Projects</p>
             </div>
             <div class="col-11 border-left m-0 p-0">
-              <table class="table table-light m-0 mb-1 text-justify" *ngFor="let project of projects['Academic']; let i=index;">
-                <tr class="text-justify m-0"><span class="ml-2 font-weight-bold">{{project.name}}</span></tr>
-                <tr [class.border-bottom]="i!=projects['Academic'].length-1"><span class="badge badge-danger ml-2 rounded-0" *ngFor="let ptag of project['tags']">#{{ptag}}</span></tr>
+              <table
+                class="table table-light m-0 mt-1"
+                *ngFor="let project of projects['Academic']; let i = index"
+              >
+                <tr>
+                  <div class="font-weight-bold ml-1 mr-1">{{
+                    project.name
+                  }}</div>
+                </tr>
+                <tr
+                  [class.border-bottom]="i != projects['Academic'].length - 1"
+                >
+                  <div
+                    class="badge badge-secondary m-1 rounded-0 border-0"
+                    *ngFor="let ptag of project['tags']"
+                    >#{{ ptag }}</div
+                  >
+                </tr>
               </table>
             </div>
-          </div>           
+          </div>
         </div>
       </div>
-
-      
     </div>
+
     <div style="border-left: 2px black" class="col-4 ml-0 p-0 border-left">
       <div class="card m-0 p-0 border-0">
-        <div class="card-header font-weight-bolder text-uppercase bg-white h5">About Me</div>
-        <div class="card-body m-0 p-0 pl-2 pt-2 text-justify border-bottom">
-          <p class="mb-1">{{about_me}}</p>
+        <div
+          class="card-header font-weight-bolder text-uppercase h5 heading rounded-0 border-0 p-1"
+        >
+          <i class="fa fa-user"></i> About Me
+        </div>
+        <div class="card-body m-0 p-0 pl-2 pt-2 text-justify">
+          <p class="mb-1">{{ about_me }}</p>
         </div>
       </div>
 
       <div class="card m-0 p-0 border-0">
-        <div class="card-header font-weight-bolder text-uppercase bg-white h5">Skills</div>
-        <div class="card-body m-0 p-1 border-bottom">
-          <div class="text-center mt-2 mb-2" *ngFor="let dep of skill_deps">
-            <div class="badge badge-default ml-1 border rounded-0" *ngFor="let skill of skills[dep]" [style.font-size]="skill.value*2.5+'px'">
-              {{skill.name}}
+        <div
+          class="card-header font-weight-bolder text-uppercase h5 heading rounded-0 border-0 p-1"
+        >
+          <i class="fa fa-wrench"></i> Skills
+        </div>
+        <div class="card-body m-0 p-0">
+          <div
+            class="text-center mt-2 mb-2"
+            [class.border-top]="ind != 0"
+            *ngFor="let dep of skill_deps; let ind = index"
+          >
+            <div
+              class="badge badge-default rounded-0 border-0"
+              *ngFor="let skill of skills[dep]"
+              [style.font-size]="skill.value * 2.5 + 'px'"
+            >
+              {{ skill.name }}
             </div>
           </div>
         </div>
       </div>
       <div class="card m-0 p-0 border-0">
-        <div class="card-header font-weight-bolder text-uppercase bg-white h5">Achievements</div>
-        <div class="card-body m-0 p-0 border-bottom text-justify">
+        <div
+          class="card-header font-weight-bolder text-uppercase h5 heading rounded-0 border-0 p-1"
+        >
+          <i class="fa fa-trophy"></i> Achievements
+        </div>
+        <div class="card-body m-0 p-0 text-justify">
           <ul class="m-1">
-            <li *ngFor="let ach of achievements">{{ach}}</li>
+            <li *ngFor="let ach of achievements">{{ ach }}</li>
           </ul>
         </div>
       </div>
-
+      <!-- <br /> -->
       <div class="card m-0 p-0 border-0">
-        <div class="card-header font-weight-bolder text-uppercase bg-white h5">Interests</div>
-        <div class="card-body border-bottom m-auto mt-1 mb-1">
-          <div class="badge badge-info m-1 rounded-0" [style.font-size]="6*2.5+'px'" *ngFor="let interest of interests">{{interest}}</div>
+        <div
+          class="card-header font-weight-bolder text-uppercase h5 heading rounded-0 border-0 p-1"
+        >
+          <i class="fa fa-thumbs-up"></i> Interests
         </div>
+        <div class="card-body mx-auto p-1">
+          <div
+            class="badge border rounded-0 m-1"
+            [style.font-size]="6 * 2.5 + 'px'"
+            *ngFor="let interest of interests"
+          >
+            {{ interest }}
+          </div>
         </div>
+      </div>
     </div>
   </div>
 </div>
-
-<hr class="m-0 bg-dark">
-<br>
+<hr class="m-1"/>
+<br />
