--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
-hr{
-    height: 2px;
-    border-bottom: 2px;
+hr {
+  height: 2px;
+  border-bottom: 2px;
 }
 
 .vertical-text {
-    transform:  translateX(-50%) translateY(-50%) rotate(-90deg);
-    float: left;
+  transform: translateX(-50%) translateY(-50%) rotate(-90deg);
+  float: left;
 }
+
+body {
+  font-family: Geneva, Verdana, sans-serif;
+}
+
+.morgan {
+  background-color: rgb(15, 142, 199);
+}
+
+.badge {
+  transition: transform 0.2s; /* Animation */
+}
+.badge:hover {
+  transform: scale(1.25);
+}
+
+/* body {
+  font-size: 12px;
+} */
+
+/* @page {
+  size: A4;
+  margin: 0;
+}
+@media print {
+  html, body {
+    width: 208mm;
+    height: 295mm;
+  }
+  /* ... the rest of the rules ... */
+/* } */
